- Added additional credits to project description - Reorganized project__ nomenclature

--- a/source/_includes/projects/harmonyhome.html
+++ b/source/_includes/projects/harmonyhome.html
@@ -3,7 +3,7 @@
   <article class="column">
     <h2 class="project__title">Home Psychological Services</h2>
 
-    <aside class="project__detail">
+    <aside class="project__info">
       <span class="project__year">2014</span>
       <ul class="project__services">
         <li>Design</li>
@@ -12,7 +12,9 @@
       </ul>
     </aside>
 
-    <p class="project__description">Home is a partnership between Eliza and Winnie, clinical psychologists specializing in child development and family services, with a strong emphasis on practising positive psychology. Their new website was designed around a serene, uplifting graphical identity that reflects the personality and values of the practice. The old content-management system was also stripped out and replaced with leaner, more specialized components to simplify creating structured content like articles and workshops, and to significantly reduce maintenance overhead. The responsive site was templated and built with <a href="http://jekyllrb.com/">Jekyll</a>, hosted on <a href="https://pages.github.com/">Github Pages</a>, and integrated with <a href="http://developmentseed.org/blog/2012/june/25/prose-a-content-editor-for-github/">Prose.io</a> for writing and publishing.</p>
+    <div class="project__description">
+      <p class="detail">Home is a partnership between Eliza and Winnie, clinical psychologists specializing in child development and family services, with a strong emphasis on practising positive psychology. Their new website was designed around a serene, uplifting graphical identity that reflects the personality and values of the practice. The old content-management system was also stripped out and replaced with leaner, more specialized components to simplify creating structured content like articles and workshops, and to significantly reduce maintenance overhead. The responsive site was templated and built with <a href="http://jekyllrb.com/">Jekyll</a>, hosted on <a href="https://pages.github.com/">Github Pages</a>, and integrated with <a href="http://developmentseed.org/blog/2012/june/25/prose-a-content-editor-for-github/">Prose.io</a> for writing and publishing.</p>
+    </div>
 
     <figure class="project__figure">
       <picture>
