--- a/source/sass/manifest.scss
+++ b/source/sass/manifest.scss
@@ -45,7 +45,7 @@
 // ORGANISMS
   @import "organisms/main-title";
   @import "organisms/project-header";
-  @import "organisms/project-detail";
+  @import "organisms/project-info";
   @import "organisms/project-description";
   @import "organisms/project-figure";
   @import "organisms/project-img";
