--- a/source/_includes/projects/ekpac.html
+++ b/source/_includes/projects/ekpac.html
@@ -3,7 +3,7 @@
 	<article class="column">
 		<h2 class="project__title"><span class="kern">Ekpac Sourcing</span></h2>
 
-		<aside class="project__detail">
+		<aside class="project__info">
       <span class="project__year">2013</span>
 			<ul class="project__services">
 				<li>Identity</li>
@@ -12,7 +12,11 @@
 			</ul>
 		</aside>
 
-		<p class="project__description">Ekpac started in Hong Kong as seafaring merchants, evolving over the course of a century into an industrial conglomerate operating across diverse construction and manufacturing sectors. A standalone marketing website was commissioned as part of an initiative to grow the sourcing division into a core line-of-business for the group. The nature of sourcing for large scale industrial organization means generating sales comes down to the efforts and expertise of Ekpac’s global sales force. The website was designed accordingly around the purpose of reinforcing the company’s reputation for quality and service. Additionally, a concept for a visual identity redesign was developed for Ekpac to explore the possibility of a broader refresh of the corporate brand.</p>
+		<div class="project__description">
+      <p class="detail">Ekpac started in Hong Kong as seafaring merchants, evolving over the course of a century into an industrial conglomerate operating across diverse construction and manufacturing sectors. A standalone marketing website was commissioned as part of an initiative to grow the sourcing division into a core line-of-business for the group. The nature of sourcing for large scale industrial organization means generating sales comes down to the efforts and expertise of Ekpac’s global sales force. The website was designed accordingly around the purpose of reinforcing the company’s reputation for quality and service. Additionally, a concept for a visual identity redesign was developed for Ekpac to explore the possibility of a broader refresh of the corporate brand.</p>
+
+      <p class="credits">Additional Graphic Design: Bronson Fung</p>
+    </div>
 
 		<figure class="project__figure">
       <picture>
