--- a/source/sass/organisms/_project-info.scss
+++ b/source/sass/organisms/_project-info.scss
@@ -6,43 +6,47 @@
 //        CLIENT: Albert Yu                                                    /
 //   DELIVERABLE: Website Prototype                                            /
 //         CLASS: Organism                                                     /
-//         TITLE: <article> for project writeup/description                    /
+//         TITLE: <aside> for project info                                     /
 //                                                                             /
 //=============================================================================/
 
-// <p>
-.project__description {
-  @extend .cf;
-  position: relative;
+// <aside>
+.project__info {
   width: 90%;
-  margin: 0 auto 4.236rem auto;
-
-  @include breakpoint($tablet) {
-    float: left;
-    width: 60%;
-    margin-bottom: 6.854rem;
-  }
-
-}
-
-// <p> Additional credits
-.credits {
-  // @extend .project__description;
-  // padding-left: 40%;
+  margin: 0 auto 1.618rem;
 
   @extend %verlagBold;
   text-transform: uppercase;
   font-size: 0.65rem;
   line-height: 1;
 
-  margin-top: 1.618rem;
-
-  /* @include breakpoint($tablet) {
-    margin-bottom: 6.854rem;
-  } */
-
-  > .slash {
-    font-size: 150%;
-    font-weight: 400;
+  @include breakpoint($tablet) {
+    width: 100%;
+    float: left;
+    width: 40%;
+    margin: -0.515rem auto 0;
   }
 }
+
+  // <ul>
+  .project__services {
+    @extend %horizontal-list;
+  }
+
+  .project__services li {
+    &:after {
+      content: " /";
+      margin: 0 0.375rem;
+      font-size: 150%;
+      font-weight: 300;
+    }
+
+    &:last-of-type::after {
+      content: "";
+    }
+  }
+
+  // <span>
+  .project__year {
+    font-size: 130%;
+  }
