- Layout design for JCA project - Colored primarily in red, which might be too harsh for its length

--- a/source/_includes/projects/juniorchefacademy.html
+++ b/source/_includes/projects/juniorchefacademy.html
@@ -3,7 +3,7 @@
 	<article class="column">
 		<h2 class="project__title">Junior Chef Academy</h2>
 
-		<aside class="project__detail">
+		<aside class="project__info">
 			<span class="project__year">2013</span>
 			<ul class="project__services">
 				<li>Identity</li>
@@ -12,11 +12,82 @@
 			</ul>
 		</aside>
 
-		<p class="project__description">Junior Chef Academy offers a one-of-a-kind extra-curricular learning experience for kids and teenagers, which happens to be a particularly crowded space in Hong Kong. Founder Judy Li subverts the typical recipe-based approach to cooking classes, instead teaching basic kitchen skills and simple preparations with a focus on nutritional, wholesome eating, giving her students a headstart on building healthy eating habits and self-sufficiency in the kitchen. This project was a joy to work on! The visual identity design struck a great balance between the playfulness of the class experience and the seriousness of underlying teachings. Print collateral and a landing page was created to promote their inaugural series of summer classes.</p>
+		<div class="project__description">
+			<p class="detail">Junior Chef Academy offers a one-of-a-kind extra-curricular learning experience for kids and teenagers, which happens to be a particularly crowded space in Hong Kong. Founder Judy Li subverts the typical recipe-based approach to cooking classes, instead teaching basic kitchen skills and simple preparations with a focus on nutritional, wholesome eating, giving her students a headstart on building healthy eating habits and self-sufficiency in the kitchen. This project was a joy to work on! The visual identity design struck a great balance between the playfulness of the class experience and the seriousness of underlying teachings. Print collateral and a landing page was created to promote their inaugural series of summer classes.</p>
+
+			<p class="credits">Additional Graphic Design: Bronson Fung <span class="slash">&nbsp;/&nbsp;</span> Production: Progressive Press</p>
+		</div>
+
+		<figure class="project__figure">
+      <img src="assets/jca/jca-bear-doodle.jpg" alt="" class="half fixed">
+      <figcaption class="project__caption--jca project__caption--right">This was given to us unsolicited. It is stupid. This was given to us unsolicited. It is stupid. This was given to us unsolicited. It is stupid. This was given to us unsolicited. It is stupid. This was given to us unsolicited. It is stupid.</figcaption>
+		</figure>
 
 		<!-- <figure class="project__figure">
-      <img src="assets/hh-responsive.png" alt="">
+      <figcaption class="project__caption--jca project__caption--left">This was given to us unsolicited. It is stupid. This was given to us unsolicited. It is stupid. This was given to us unsolicited. It is stupid. This was given to us unsolicited. It is stupid. This was given to us unsolicited. It is stupid.</figcaption>
+      <img src="assets/jca/jca-bear-doodle.jpg" alt="" class="half fixed">
 		</figure> -->
+
+		<figure class="project__figure">
+			<img src="assets/jca/jca-personality.jpg" alt="" class="bordered">
+      <figcaption class="project__caption--jca project__caption--below right">Personality and type exploration blurb. Trust fund master cleanse fap blog tousled tote bag. Banksy sartorial lomo selvage. Sartorial fanny pack pour-over Kickstarter Neutra, photo booth Pitchfork.</figcaption>
+		</figure>
+
+		<figure class="project__figure">
+      <figcaption class="project__caption--jca project__caption--left">We repurposed that whisk. Trust fund master cleanse fap blog tousled tote bag. Banksy sartorial lomo selvage. Sartorial fanny pack pour-over Kickstarter Neutra, photo booth Pitchfork.</figcaption>
+			<img src="assets/jca/jca-bear-doodle-highlight.png" alt="" class="half fixed">
+		</figure>
+
+		<figure class="project__figure">
+			<img src="assets/jca/jca-utensils.jpg" alt="" class="half bordered fixed">
+			<figcaption class="project__caption--jca project__caption--right">We fashioned a whole set of utensils. Forage Echo Park Schlitz mustache Helvetica twee. Hella raw denim pop-up selvage messenger bag paleo.</figcaption>
+		</figure>
+
+		<figure class="project__figure">
+			<img src="assets/jca/jca-pattern.jpg" alt="" class="bordered">
+			<figcaption class="project__caption--jca project__caption--below">The utensils were tiled into a pattern, which formed the backbone of the visual identity.</figcaption>
+		</figure>
+
+		<figure class="project__figure">
+			<picture class="bordered half">
+				<img src="assets/jca/jca-bacon.jpg" alt="" class="">
+			</picture>
+			<picture class="bordered half last">
+				<img src="assets/jca/jca-print-a.jpg" alt="" class="">
+			</picture>
+		</figure>
+
+		<figure class="project__figure">
+			<picture class="bordered half">
+				<img src="assets/jca/jca-print-b.jpg" alt="" class="">
+			</picture>
+
+			<picture class="bordered half last">
+				<img src="assets/jca/jca-pasta.jpg" alt="" class="">
+			</picture>
+		</figure>
+
+		<figure class="project__figure">
+			<picture class="bordered">
+				<img src="assets/jca/jca-docs.jpg" alt="">
+			</picture>
+			<figcaption class="project__caption--jca project__caption--below right">I made some documents. Stuff looks good in black and white. Avenir was chosen as the text face.</figcaption>
+		</figure>
+
+		<figure class="project__figure">
+			<picture>
+				<img src="assets/jca/jca-responsive.png" alt="">
+			</picture>
+		</figure>
+
+		<figure class="project__figure">
+			<video autoplay loop class="">
+				<source src="assets/jca/jca.mp4" type="video/mp4; codecs=avc1.42E01E,mp4a.40.2">
+				<!-- <source src="assets/ekpac-process.webm" type="video/webm; codecs=vp8,vorbis"> -->
+				<!-- <source src="assets/ekpac-process.ogv" type="video/ogg; codecs=theora,vorbis"> -->
+			</video>
+			<!-- <figcaption class="project__caption--jca project__caption--below left">The sourcing business’s process and approach was presented as candidly as possible to stand out in China’s industrial sector, which is often perceived as opaque and impenetrable.</figcaption> -->
+		</figure>
 
 	</article>
 </div>
