- Trying out a lighter, red on white color scheme for JCA

--- a/source/_includes/projects/juniorchefacademy.html
+++ b/source/_includes/projects/juniorchefacademy.html
@@ -19,50 +19,46 @@
 		</div>
 
 		<figure class="project__figure">
-      <img src="assets/jca/jca-bear-doodle.jpg" alt="" class="half fixed">
-      <figcaption class="project__caption--jca project__caption--right">This was given to us unsolicited. It is stupid. This was given to us unsolicited. It is stupid. This was given to us unsolicited. It is stupid. This was given to us unsolicited. It is stupid. This was given to us unsolicited. It is stupid.</figcaption>
-		</figure>
-
-		<!-- <figure class="project__figure">
-      <figcaption class="project__caption--jca project__caption--left">This was given to us unsolicited. It is stupid. This was given to us unsolicited. It is stupid. This was given to us unsolicited. It is stupid. This was given to us unsolicited. It is stupid. This was given to us unsolicited. It is stupid.</figcaption>
-      <img src="assets/jca/jca-bear-doodle.jpg" alt="" class="half fixed">
-		</figure> -->
-
-		<figure class="project__figure">
-			<img src="assets/jca/jca-personality.jpg" alt="" class="bordered">
-      <figcaption class="project__caption--jca project__caption--below right">Personality and type exploration blurb. Trust fund master cleanse fap blog tousled tote bag. Banksy sartorial lomo selvage. Sartorial fanny pack pour-over Kickstarter Neutra, photo booth Pitchfork.</figcaption>
+      <img src="assets/jca/jca-bear-doodle.jpg" alt="" class="half bordered--white fixed">
+      <figcaption class="project__caption--jca project__caption--right">This fellow was Judy’s initial “self-portrait” of her brand, and somehow found its way into the our initial email conversations about plans for Junior Chef Academy. It provided a good starting point for discussing topics like personality, purpose, and values – the intangible qualities yet critical qualities that make a strong brand.</figcaption>
 		</figure>
 
 		<figure class="project__figure">
-      <figcaption class="project__caption--jca project__caption--left">We repurposed that whisk. Trust fund master cleanse fap blog tousled tote bag. Banksy sartorial lomo selvage. Sartorial fanny pack pour-over Kickstarter Neutra, photo booth Pitchfork.</figcaption>
-			<img src="assets/jca/jca-bear-doodle-highlight.png" alt="" class="half fixed">
+			<img src="assets/jca/jca-personality.jpg" alt="" class="bordered--white">
+      <figcaption class="project__caption--jca project__caption--below right">The design challenge pretty much came down to putting a “fun twist” on education, which is probably by far the most common way that people position educational programs and activities for children. We approached this by eliminating the word “fun” from our vocabulary, and exploring typographical representations of Judy’s personality traits that really stood out. The casual, sophistication of Pacifico’s cursive letterforms, large strokes, and generous curves really puts a smile on your face, and captured exactly what we were looking for.</figcaption>
 		</figure>
 
 		<figure class="project__figure">
-			<img src="assets/jca/jca-utensils.jpg" alt="" class="half bordered fixed">
-			<figcaption class="project__caption--jca project__caption--right">We fashioned a whole set of utensils. Forage Echo Park Schlitz mustache Helvetica twee. Hella raw denim pop-up selvage messenger bag paleo.</figcaption>
+      <figcaption class="project__caption--jca project__caption--left">Practical, everyday skills is the most important thing Judy wanted to teach her students. As a pretty decent home-cook, I know from my own sweat and tears that practical experience and using good tools go hand-in-hand. The idea for Junior Chef Academy’s graphic identity began by repurposing this whisk.</figcaption>
+			<img src="assets/jca/jca-bear-doodle-highlight.png" alt="" class="half bordered--white fixed">
 		</figure>
 
 		<figure class="project__figure">
-			<img src="assets/jca/jca-pattern.jpg" alt="" class="bordered">
-			<figcaption class="project__caption--jca project__caption--below">The utensils were tiled into a pattern, which formed the backbone of the visual identity.</figcaption>
+			<img src="assets/jca/jca-utensils.jpg" alt="" class="half bordered--white fixed">
+			<figcaption class="project__caption--jca project__caption--right">Whisks happen to be a very common graphical device for anything related to food and cooking. Yet most cooks, celebrity, professional and amateur alike, would argue that the knife is a cook’s single most important tool. Judy believes that being practical in the kitchen means making use of all the tools at your disposal at the right time and occasion.</figcaption>
 		</figure>
 
 		<figure class="project__figure">
-			<picture class="bordered half">
+			<img src="assets/jca/jca-pattern.jpg" alt="" class="">
+			<figcaption class="project__caption--jca project__caption--below left">We fashioned a a whole set of kitchen tools, which was tiled into a pattern, forming the backbone of Junior Chef Academy’s identity. Repetition is inherently pleasing to the eye, and the playfulness of the pattern took the edge off its stern arrangement. The solid strokes and gently edges of the pattern was informed by the letterforms of Pacifico, which was used as a titling font.</figcaption>
+		</figure>
+
+		<figure class="project__figure">
+			<picture class="bordered--red half">
 				<img src="assets/jca/jca-bacon.jpg" alt="" class="">
 			</picture>
-			<picture class="bordered half last">
+			<picture class="bordered--gray half last">
 				<img src="assets/jca/jca-print-a.jpg" alt="" class="">
 			</picture>
+			<figcaption class="project__caption--jca project__caption--below right">Print collateral included a brochure and business cards. The pattern proved to be eye-catching even at smaller sizes.</figcaption>
 		</figure>
 
 		<figure class="project__figure">
-			<picture class="bordered half">
+			<picture class="bordered--gray half">
 				<img src="assets/jca/jca-print-b.jpg" alt="" class="">
 			</picture>
 
-			<picture class="bordered half last">
+			<picture class="bordered--red half last">
 				<img src="assets/jca/jca-pasta.jpg" alt="" class="">
 			</picture>
 		</figure>
@@ -71,7 +67,7 @@
 			<picture class="bordered">
 				<img src="assets/jca/jca-docs.jpg" alt="">
 			</picture>
-			<figcaption class="project__caption--jca project__caption--below right">I made some documents. Stuff looks good in black and white. Avenir was chosen as the text face.</figcaption>
+			<figcaption class="project__caption--jca project__caption--below right">Avenir was chosen as the text face for its cordial, sensible appeal, and was used for text-heavy applications like forms, schedules, and course materials.</figcaption>
 		</figure>
 
 		<figure class="project__figure">
@@ -81,12 +77,12 @@
 		</figure>
 
 		<figure class="project__figure">
-			<video autoplay loop class="">
+			<video autoplay loop class="bordered">
 				<source src="assets/jca/jca.mp4" type="video/mp4; codecs=avc1.42E01E,mp4a.40.2">
 				<!-- <source src="assets/ekpac-process.webm" type="video/webm; codecs=vp8,vorbis"> -->
 				<!-- <source src="assets/ekpac-process.ogv" type="video/ogg; codecs=theora,vorbis"> -->
 			</video>
-			<!-- <figcaption class="project__caption--jca project__caption--below left">The sourcing business’s process and approach was presented as candidly as possible to stand out in China’s industrial sector, which is often perceived as opaque and impenetrable.</figcaption> -->
+			<figcaption class="project__caption--jca project__caption--below left">While the fundamental “learn to cook” premise needs little explanation, the goal of the website was to communicate Junior Chef Academy’s unique angle – practicality, nutrition, and building good habits.</figcaption>
 		</figure>
 
 	</article>
