--- a/source/sass/organisms/_project-harmonyhome.scss
+++ b/source/sass/organisms/_project-harmonyhome.scss
@@ -37,7 +37,7 @@
   }
 
   // Services text/list
-  .harmonyhome .project__detail {
+  .harmonyhome .project__info {
     @include tran(color, darken(#1a4b3e, 2), 0.95, lighten);
   }
 
