- Created per-project image directories to cope with 6 files per   <picture> element

--- a/source/sass/organisms/_project-ekpac.scss
+++ b/source/sass/organisms/_project-ekpac.scss
@@ -20,7 +20,7 @@
 .ekpac .project__header {
   height: 25rem;
 
-  background-image:url('../assets/ekpac-header.jpg');
+  background-image:url('../assets/ekpac/ekpac-header.jpg');
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
