--- a/source/sass/organisms/_project-harmonyhome.scss
+++ b/source/sass/organisms/_project-harmonyhome.scss
@@ -17,7 +17,7 @@
 }
 
 .harmonyhome .project__header {
-  background-image:url('../assets/hh-header.jpg');
+  background-image:url('../assets/harmonyhome/hh-header.jpg');
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
