--- a/source/_includes/projects/ekpac.html
+++ b/source/_includes/projects/ekpac.html
@@ -21,18 +21,18 @@
 		<figure class="project__figure">
       <picture>
         <!--[if IE 9]><video style="display: none;"><![endif]-->
-        <source srcset="assets/ekpac-responsive-lg.png, assets/ekpac-responsive-lg@2x.png 2x" media="(min-width: 48.0625em)" >
-        <source srcset="assets/ekpac-responsive-md.png, assets/ekpac-responsive-md@2x.png 2x" media="(min-width: 30em)" >
+        <source srcset="assets/ekpac/ekpac-responsive-lg.png, assets/ekpac/ekpac-responsive-lg@2x.png 2x" media="(min-width: 48.0625em)" >
+        <source srcset="assets/ekpac/ekpac-responsive-md.png, assets/ekpac/ekpac-responsive-md@2x.png 2x" media="(min-width: 30em)" >
         <!--[if IE 9]></video><![endif]-->
-        <img srcset="assets/ekpac-responsive-sm.png, assets/ekpac-responsive-sm@2x.png 2x" >
+        <img srcset="assets/ekpac/ekpac-responsive-sm.png, assets/ekpac/ekpac-responsive-sm@2x.png 2x" >
       </picture>
 		</figure>
 
 		<figure class="project__figure">
 			<video autoplay loop class="">
-				<source src="assets/ekpac-process.mp4" type="video/mp4; codecs=avc1.42E01E,mp4a.40.2">
-				<source src="assets/ekpac-process.webm" type="video/webm; codecs=vp8,vorbis">
-				<source src="assets/ekpac-process.ogv" type="video/ogg; codecs=theora,vorbis">
+				<source src="assets/ekpac/ekpac-process.mp4" type="video/mp4; codecs=avc1.42E01E,mp4a.40.2">
+				<source src="assets/ekpac/ekpac-process.webm" type="video/webm; codecs=vp8,vorbis">
+				<source src="assets/ekpac/ekpac-process.ogv" type="video/ogg; codecs=theora,vorbis">
 			</video>
 			<figcaption class="project__caption--ekpac project__caption--below left">The sourcing business’s process and approach was presented as candidly as possible to stand out in China’s industrial sector, which is often perceived as opaque and impenetrable.</figcaption>
 		</figure>
@@ -40,20 +40,20 @@
 		<figure class="project__figure">
       <picture class="bordered half">
         <!--[if IE 9]><video style="display: none;"><![endif]-->
-        <source srcset="assets/ekpac-products-lg.jpg, assets/ekpac-products-lg@2x.jpg 2x" media="(min-width: 48.0625em)" >
-        <source srcset="assets/ekpac-products-md.jpg, assets/ekpac-products-md@2x.jpg 2x" media="(min-width: 30em)" >
+        <source srcset="assets/ekpac/ekpac-products-lg.jpg, assets/ekpac/ekpac-products-lg@2x.jpg 2x" media="(min-width: 48.0625em)" >
+        <source srcset="assets/ekpac/ekpac-products-md.jpg, assets/ekpac/ekpac-products-md@2x.jpg 2x" media="(min-width: 30em)" >
         <!--[if IE 9]></video><![endif]-->
-        <img srcset="assets/ekpac-products-sm.jpg, assets/ekpac-products-sm@2x.jpg 2x" >
+        <img srcset="assets/ekpac/ekpac-products-sm.jpg, assets/ekpac/ekpac-products-sm@2x.jpg 2x" >
       </picture>
 
       <hr class="hr">
 
       <picture class="bordered half last">
         <!--[if IE 9]><video style="display: none;"><![endif]-->
-        <source srcset="assets/ekpac-excellence-lg.jpg, assets/ekpac-excellence-lg@2x.jpg 2x" media="(min-width: 48.0625em)" >
-        <source srcset="assets/ekpac-excellence-md.jpg, assets/ekpac-excellence-md@2x.jpg 2x" media="(min-width: 30em)" >
+        <source srcset="assets/ekpac/ekpac-excellence-lg.jpg, assets/ekpac/ekpac-excellence-lg@2x.jpg 2x" media="(min-width: 48.0625em)" >
+        <source srcset="assets/ekpac/ekpac-excellence-md.jpg, assets/ekpac/ekpac-excellence-md@2x.jpg 2x" media="(min-width: 30em)" >
         <!--[if IE 9]></video><![endif]-->
-        <img srcset="assets/ekpac-excellence-sm.jpg, assets/ekpac-excellence-sm@2x.jpg 2x" >
+        <img srcset="assets/ekpac/ekpac-excellence-sm.jpg, assets/ekpac/ekpac-excellence-sm@2x.jpg 2x" >
       </picture>
 		</figure>
 
@@ -62,10 +62,10 @@
 		<figure class="project__figure">
       <picture class="bordered">
         <!--[if IE 9]><video style="display: none;"><![endif]-->
-        <source srcset="assets/ekpac-id-beforeAfter-lg.jpg, assets/ekpac-id-beforeAfter-lg@2x.jpg 2x" media="(min-width: 48.0625em)" >
-        <source srcset="assets/ekpac-id-beforeAfter-md.jpg, assets/ekpac-id-beforeAfter-md@2x.jpg 2x" media="(min-width: 30em)" >
+        <source srcset="assets/ekpac/ekpac-id-beforeAfter-lg.jpg, assets/ekpac/ekpac-id-beforeAfter-lg@2x.jpg 2x" media="(min-width: 48.0625em)" >
+        <source srcset="assets/ekpac/ekpac-id-beforeAfter-md.jpg, assets/ekpac/ekpac-id-beforeAfter-md@2x.jpg 2x" media="(min-width: 30em)" >
         <!--[if IE 9]></video><![endif]-->
-        <img srcset="assets/ekpac-id-beforeAfter-sm.jpg, assets/ekpac-id-beforeAfter-sm@2x.jpg 2x" >
+        <img srcset="assets/ekpac/ekpac-id-beforeAfter-sm.jpg, assets/ekpac/ekpac-id-beforeAfter-sm@2x.jpg 2x" >
       </picture>
 
       <figcaption class="project__caption--ekpac project__caption--below left">The new mark is distinguished by a sleek, agile form – a visualization of Ekpac’s persistent forward momentum. The redesign as a whole preserves and repurposes elements of the old identity, paying respect to the company’s rich heritage.</figcaption>
@@ -74,36 +74,36 @@
 		<figure class="project__figure">
       <picture class="bordered half">
         <!--[if IE 9]><video style="display: none;"><![endif]-->
-        <source srcset="assets/ekpac-id-heritage-lg.jpg, assets/ekpac-id-heritage-lg@2x.jpg 2x" media="(min-width: 48.0625em)" >
-        <source srcset="assets/ekpac-id-heritage-md.jpg, assets/ekpac-id-heritage-md@2x.jpg 2x" media="(min-width: 30em)" >
+        <source srcset="assets/ekpac/ekpac-id-heritage-lg.jpg, assets/ekpac/ekpac-id-heritage-lg@2x.jpg 2x" media="(min-width: 48.0625em)" >
+        <source srcset="assets/ekpac/ekpac-id-heritage-md.jpg, assets/ekpac/ekpac-id-heritage-md@2x.jpg 2x" media="(min-width: 30em)" >
         <!--[if IE 9]></video><![endif]-->
-        <img srcset="assets/ekpac-id-heritage-sm.jpg, assets/ekpac-id-heritage-sm@2x.jpg 2x" >
+        <img srcset="assets/ekpac/ekpac-id-heritage-sm.jpg, assets/ekpac/ekpac-id-heritage-sm@2x.jpg 2x" >
       </picture>
 
       <picture class="bordered half last">
         <!--[if IE 9]><video style="display: none;"><![endif]-->
-        <source srcset="assets/ekpac-id-wordmark-lg.jpg, assets/ekpac-id-wordmark-lg@2x.jpg 2x" media="(min-width: 48.0625em)" >
-        <source srcset="assets/ekpac-id-wordmark-md.jpg, assets/ekpac-id-wordmark-md@2x.jpg 2x" media="(min-width: 30em)" >
+        <source srcset="assets/ekpac/ekpac-id-wordmark-lg.jpg, assets/ekpac/ekpac-id-wordmark-lg@2x.jpg 2x" media="(min-width: 48.0625em)" >
+        <source srcset="assets/ekpac/ekpac-id-wordmark-md.jpg, assets/ekpac/ekpac-id-wordmark-md@2x.jpg 2x" media="(min-width: 30em)" >
         <!--[if IE 9]></video><![endif]-->
-        <img srcset="assets/ekpac-id-wordmark-sm.jpg, assets/ekpac-id-wordmark-sm@2x.jpg 2x" >
+        <img srcset="assets/ekpac/ekpac-id-wordmark-sm.jpg, assets/ekpac/ekpac-id-wordmark-sm@2x.jpg 2x" >
       </picture>
 		</figure>
 
 		<figure class="project__figure">
       <picture class="bordered half">
         <!--[if IE 9]><video style="display: none;"><![endif]-->
-        <source srcset="assets/ekpac-id-lockups-lg.jpg, assets/ekpac-id-lockups-lg@2x.jpg 2x" media="(min-width: 48.0625em)" >
-        <source srcset="assets/ekpac-id-lockups-md.jpg, assets/ekpac-id-lockups-md@2x.jpg 2x" media="(min-width: 30em)" >
+        <source srcset="assets/ekpac/ekpac-id-lockups-lg.jpg, assets/ekpac/ekpac-id-lockups-lg@2x.jpg 2x" media="(min-width: 48.0625em)" >
+        <source srcset="assets/ekpac/ekpac-id-lockups-md.jpg, assets/ekpac/ekpac-id-lockups-md@2x.jpg 2x" media="(min-width: 30em)" >
         <!--[if IE 9]></video><![endif]-->
-        <img srcset="assets/ekpac-id-lockups-sm.jpg, assets/ekpac-id-lockups-sm@2x.jpg 2x" >
+        <img srcset="assets/ekpac/ekpac-id-lockups-sm.jpg, assets/ekpac/ekpac-id-lockups-sm@2x.jpg 2x" >
       </picture>
 
       <picture class="bordered half last">
         <!--[if IE 9]><video style="display: none;"><![endif]-->
-        <source srcset="assets/ekpac-id-colors-lg.jpg, assets/ekpac-id-colors-lg@2x.jpg 2x" media="(min-width: 48.0625em)" >
-        <source srcset="assets/ekpac-id-colors-md.jpg, assets/ekpac-id-colors-md@2x.jpg 2x" media="(min-width: 30em)" >
+        <source srcset="assets/ekpac/ekpac-id-colors-lg.jpg, assets/ekpac/ekpac-id-colors-lg@2x.jpg 2x" media="(min-width: 48.0625em)" >
+        <source srcset="assets/ekpac/ekpac-id-colors-md.jpg, assets/ekpac/ekpac-id-colors-md@2x.jpg 2x" media="(min-width: 30em)" >
         <!--[if IE 9]></video><![endif]-->
-        <img srcset="assets/ekpac-id-colors-sm.jpg, assets/ekpac-id-colors-sm@2x.jpg 2x" >
+        <img srcset="assets/ekpac/ekpac-id-colors-sm.jpg, assets/ekpac/ekpac-id-colors-sm@2x.jpg 2x" >
       </picture>
 		</figure>
 
