- Produced source assets for Ekpac/Harmony based on new srcset tiers - Recompressed some @1x images with 0 quality and @2x pixels because the   resultant file is smaller but visual quality is equal or better

--- a/source/_includes/projects/harmonyhome.html
+++ b/source/_includes/projects/harmonyhome.html
@@ -20,27 +20,38 @@
       <picture>
         <!--[if IE 9]><video style="display: none;"><![endif]-->
         <source srcset="assets/harmonyhome/hh-responsive-lg.png, assets/harmonyhome/hh-responsive-lg@2x.png 2x" media="(min-width: 48.0625em)" >
-        <source srcset="assets/harmonyhome/hh-responsive-md.png, assets/harmonyhome/hh-responsive-md@2x.png 2x" media="(min-width: 30em)" >
+        <source srcset="assets/harmonyhome/hh-responsive-md.png, assets/harmonyhome/hh-responsive-md@2x.png 2x" media="(min-width: 30.0625em)" >
+        <source srcset="assets/harmonyhome/hh-responsive-sm.png, assets/harmonyhome/hh-responsive-sm@2x.png 2x" media="(min-width: 20.0625em)" >
         <!--[if IE 9]></video><![endif]-->
-        <img srcset="assets/harmonyhome/hh-responsive-sm.png, assets/harmonyhome/hh-responsive-sm@2x.png 2x" >
+        <img srcset="assets/harmonyhome/hh-responsive-xs.png, assets/harmonyhome/hh-responsive-xs@2x.png 2x" >
       </picture>
     </figure>
 
     <figure class="project__figure">
       <picture class="bordered half">
         <!--[if IE 9]><video style="display: none;"><![endif]-->
-        <source srcset="assets/harmonyhome/hh-style-tile-a-lg.jpg, assets/harmonyhome/hh-style-tile-a-lg@2x.jpg 2x" media="(min-width: 48.0625em)" >
-        <source srcset="assets/harmonyhome/hh-style-tile-a-md.jpg, assets/harmonyhome/hh-style-tile-a-md@2x.jpg 2x" media="(min-width: 30em)" >
+        <!-- <source srcset="assets/harmonyhome/hh-style-tile-a-lg.jpg, assets/harmonyhome/hh-style-tile-a-lg@2x.jpg 2x" media="(min-width: 48.0625em)" > -->
+        <!-- <source srcset="assets/harmonyhome/hh-style-tile-a-md.jpg, assets/harmonyhome/hh-style-tile-a-md@2x.jpg 2x" media="(min-width: 30.0625em)" > -->
+        <!-- <source srcset="assets/harmonyhome/hh-style-tile-a-sm.jpg, assets/harmonyhome/hh-style-tile-a-sm@2x.jpg 2x" media="(min-width: 20.0625em)" > -->
+        <source srcset="assets/harmonyhome/hh-style-tile-a-lg@2x.jpg" media="(min-width: 48.0625em)" >
+        <source srcset="assets/harmonyhome/hh-style-tile-a-md@2x.jpg" media="(min-width: 30.0625em)" >
+        <source srcset="assets/harmonyhome/hh-style-tile-a-sm@2x.jpg" media="(min-width: 20.0625em)" >
         <!--[if IE 9]></video><![endif]-->
-        <img srcset="assets/harmonyhome/hh-style-tile-a-sm.jpg, assets/harmonyhome/hh-style-tile-a-sm@2x.jpg 2x" >
+        <!-- <img srcset="assets/harmonyhome/hh-style-tile-a-xs.jpg, assets/harmonyhome/hh-style-tile-a-xs@2x.jpg 2x" > -->
+        <img srcset="assets/harmonyhome/hh-style-tile-a-xs@2x.jpg" >
       </picture>
 
       <picture class="bordered half last">
         <!--[if IE 9]><video style="display: none;"><![endif]-->
-        <source srcset="assets/harmonyhome/hh-style-tile-b-lg.jpg, assets/harmonyhome/hh-style-tile-b-lg@2x.jpg 2x" media="(min-width: 48.0625em)" >
-        <source srcset="assets/harmonyhome/hh-style-tile-b-md.jpg, assets/harmonyhome/hh-style-tile-b-md@2x.jpg 2x" media="(min-width: 30em)" >
+        <!-- <source srcset="assets/harmonyhome/hh-style-tile-b-lg.jpg, assets/harmonyhome/hh-style-tile-b-lg@2x.jpg 2x" media="(min-width: 48.0625em)" > -->
+        <!-- <source srcset="assets/harmonyhome/hh-style-tile-b-md.jpg, assets/harmonyhome/hh-style-tile-b-md@2x.jpg 2x" media="(min-width: 30.0625em)" > -->
+        <!-- <source srcset="assets/harmonyhome/hh-style-tile-b-sm.jpg, assets/harmonyhome/hh-style-tile-b-sm@2x.jpg 2x" media="(min-width: 20.0625em)" > -->
+        <source srcset="assets/harmonyhome/hh-style-tile-b-lg@2x.jpg" media="(min-width: 48.0625em)" >
+        <source srcset="assets/harmonyhome/hh-style-tile-b-md@2x.jpg" media="(min-width: 30.0625em)" >
+        <source srcset="assets/harmonyhome/hh-style-tile-b-sm@2x.jpg" media="(min-width: 20.0625em)" >
         <!--[if IE 9]></video><![endif]-->
-        <img srcset="assets/harmonyhome/hh-style-tile-b-sm.jpg, assets/harmonyhome/hh-style-tile-b-sm@2x.jpg 2x" >
+        <!-- <img srcset="assets/harmonyhome/hh-style-tile-b-xs.jpg, assets/harmonyhome/hh-style-tile-b-xs@2x.jpg 2x" > -->
+        <img srcset="assets/harmonyhome/hh-style-tile-b-xs@2x.jpg" >
       </picture>
 
       <figcaption class="project__caption--harmonyhome project__caption--below right">Style tiles and element collages were used to quickly explore visual styles and elements. The final design is characterized by a soft color palette derived from the existing logo and subtle photography treatments.</figcaption>
@@ -50,9 +61,10 @@
       <picture class="bordered">
         <!--[if IE 9]><video style="display: none;"><![endif]-->
         <source srcset="assets/harmonyhome/hh-prose-interface-lg.jpg, assets/harmonyhome/hh-prose-interface-lg@2x.jpg 2x" media="(min-width: 48.0625em)" >
-        <source srcset="assets/harmonyhome/hh-prose-interface-md.jpg, assets/harmonyhome/hh-prose-interface-md@2x.jpg 2x" media="(min-width: 30em)" >
+        <source srcset="assets/harmonyhome/hh-prose-interface-md.jpg, assets/harmonyhome/hh-prose-interface-md@2x.jpg 2x" media="(min-width: 30.0625em)" >
+        <source srcset="assets/harmonyhome/hh-prose-interface-sm.jpg, assets/harmonyhome/hh-prose-interface-sm@2x.jpg 2x" media="(min-width: 20.0625em)" >
         <!--[if IE 9]></video><![endif]-->
-        <img srcset="assets/harmonyhome/hh-prose-interface-sm.jpg, assets/harmonyhome/hh-prose-interface-sm@2x.jpg 2x" >
+        <img srcset="assets/harmonyhome/hh-prose-interface-xs.jpg, assets/harmonyhome/hh-prose-interface-xs@2x.jpg 2x" >
       </picture>
 
       <figcaption class="project__caption--harmonyhome project__caption--below left">On the backend, Prose was chosen for its simple and intuitive interface that only exposes writing and editing capabilities. Combining that with Github Pages allowed effortless publishing and backups. A lot of technical debt created by the previous, conventional CMS was eliminated.</figcaption>
@@ -61,20 +73,30 @@
     <figure class="project__figure">
       <picture class="bordered half">
         <!--[if IE 9]><video style="display: none;"><![endif]-->
-        <source srcset="assets/harmonyhome/hh-profile-lg.jpg, assets/harmonyhome/hh-profile-lg@2x.jpg 2x" media="(min-width: 48.0625em)" >
-        <source srcset="assets/harmonyhome/hh-profile-md.jpg, assets/harmonyhome/hh-profile-md@2x.jpg 2x" media="(min-width: 30em)" >
+        <!-- <source srcset="assets/harmonyhome/hh-profile-lg.jpg, assets/harmonyhome/hh-profile-lg@2x.jpg 2x" media="(min-width: 48.0625em)" > -->
+        <!-- <source srcset="assets/harmonyhome/hh-profile-md.jpg, assets/harmonyhome/hh-profile-md@2x.jpg 2x" media="(min-width: 30.0625em)" > -->
+        <!-- <source srcset="assets/harmonyhome/hh-profile-sm.jpg, assets/harmonyhome/hh-profile-sm@2x.jpg 2x" media="(min-width: 20.0625em)" > -->
+        <source srcset="assets/harmonyhome/hh-profile-lg@2x.jpg" media="(min-width: 48.0625em)" >
+        <source srcset="assets/harmonyhome/hh-profile-md@2x.jpg" media="(min-width: 30.0625em)" >
+        <source srcset="assets/harmonyhome/hh-profile-sm@2x.jpg" media="(min-width: 20.0625em)" >
         <!--[if IE 9]></video><![endif]-->
-        <img srcset="assets/harmonyhome/hh-profile-sm.jpg, assets/harmonyhome/hh-profile-sm@2x.jpg 2x" >
+        <!-- <img srcset="assets/harmonyhome/hh-profile-xs.jpg, assets/harmonyhome/hh-profile-xs@2x.jpg 2x" > -->
+        <img srcset="assets/harmonyhome/hh-profile-xs@2x.jpg" >
       </picture>
 
       <hr class="hr">
 
       <picture class="bordered half last">
         <!--[if IE 9]><video style="display: none;"><![endif]-->
-        <source srcset="assets/harmonyhome/hh-services-lg.jpg, assets/harmonyhome/hh-services-lg@2x.jpg 2x" media="(min-width: 48.0625em)" >
-        <source srcset="assets/harmonyhome/hh-services-md.jpg, assets/harmonyhome/hh-services-md@2x.jpg 2x" media="(min-width: 30em)" >
+        <!-- <source srcset="assets/harmonyhome/hh-services-lg.jpg, assets/harmonyhome/hh-services-lg@2x.jpg 2x" media="(min-width: 48.0625em)" > -->
+        <!-- <source srcset="assets/harmonyhome/hh-services-md.jpg, assets/harmonyhome/hh-services-md@2x.jpg 2x" media="(min-width: 30.0625em)" > -->
+        <!-- <source srcset="assets/harmonyhome/hh-services-sm.jpg, assets/harmonyhome/hh-services-sm@2x.jpg 2x" media="(min-width: 20.0625em)" > -->
+        <source srcset="assets/harmonyhome/hh-services-lg@2x.jpg" media="(min-width: 48.0625em)" >
+        <source srcset="assets/harmonyhome/hh-services-md@2x.jpg" media="(min-width: 30.0625em)" >
+        <source srcset="assets/harmonyhome/hh-services-sm@2x.jpg" media="(min-width: 20.0625em)" >
         <!--[if IE 9]></video><![endif]-->
-        <img srcset="assets/harmonyhome/hh-services-sm.jpg, assets/harmonyhome/hh-services-sm@2x.jpg 2x" >
+        <!-- <img srcset="assets/harmonyhome/hh-services-xs.jpg, assets/harmonyhome/hh-services-xs@2x.jpg 2x" > -->
+        <img srcset="assets/harmonyhome/hh-services-xs@2x.jpg" >
       </picture>
     </figure>
 
