- Cleaned up JCA project for smaller screens - Realigned caption-arrows to respond properly to layout changes

--- a/source/_includes/projects/juniorchefacademy.html
+++ b/source/_includes/projects/juniorchefacademy.html
@@ -42,8 +42,10 @@
       <figcaption class="project__caption--jca project__caption--below right">The design challenge pretty much came down to putting a “fun twist” on education, which is probably by far the most common way that people position educational programs and activities for children. We approached this by eliminating the word “fun” from our vocabulary, and exploring typographical representations of Judy’s personality traits that really stood out. The casual, sophistication of Pacifico’s cursive letterforms, large strokes, and generous curves really puts a smile on your face, and captured exactly what we were looking for.</figcaption>
 		</figure>
 
+		<hr class="hr">
+
 		<figure class="project__figure">
-      <figcaption class="project__caption--jca project__caption--left">Practical, everyday skills is the most important thing Judy wanted to teach her students. As a pretty decent home-cook, I know from my own sweat and tears that practical experience and using good tools go hand-in-hand. The idea for Junior Chef Academy’s graphic identity began by repurposing this whisk.</figcaption>
+      <figcaption class="project__caption--jca project__caption--left" id="jca-bear-doodle-highlight-caption">Practical, everyday skills is the most important thing Judy wanted to teach her students. As a pretty decent home-cook, I know from my own sweat and tears that practical experience and using good tools go hand-in-hand. Junior Chef Academy’s graphic identity began with repurposing this whisk.</figcaption>
       <picture class="bordered--white half fixed" id="jca-bear-doodle-highlight">
         <!--[if IE 9]><video style="display: none;"><![endif]-->
         <source srcset="assets/juniorchefacademy/jca-bear-doodle-highlight-md.jpg, assets/juniorchefacademy/jca-bear-doodle-highlight-md@2x.jpg 2x" media="(min-width: 30.0625em)" >
@@ -135,9 +137,6 @@
         <source srcset="assets/juniorchefacademy/jca-responsive-lg.png, assets/juniorchefacademy/jca-responsive-lg@2x.png 2x" media="(min-width: 48.0625em)" >
         <source srcset="assets/juniorchefacademy/jca-responsive-md.png, assets/juniorchefacademy/jca-responsive-md@2x.png 2x" media="(min-width: 30.0625em)" >
         <source srcset="assets/juniorchefacademy/jca-responsive-sm.png, assets/juniorchefacademy/jca-responsive-sm@2x.png 2x" media="(min-width: 20.0625em)" >
-        <!-- <source srcset="assets/juniorchefacademy/jca-responsive-lg@2x.png" media="(min-width: 48.0625em)" > -->
-        <!-- <source srcset="assets/juniorchefacademy/jca-responsive-md@2x.png" media="(min-width: 30.0625em)" > -->
-        <!-- <source srcset="assets/juniorchefacademy/jca-responsive-sm@2x.png" media="(min-width: 20.0625em)" > -->
         <!--[if IE 9]></video><![endif]-->
         <img srcset="assets/juniorchefacademy/jca-responsive-xs.png, assets/juniorchefacademy/jca-responsive-xs@2x.png 2x" >
 			</picture>
