--- a/source/_includes/document-header.html
+++ b/source/_includes/document-header.html
@@ -10,27 +10,28 @@
   <meta name="description" content="Albert Yu is a freelance designer and developer in Hong Kong.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<!--build:remove -->
+<!-- ASYNCHRONOUSLY LOAD CSS+JS -->
+  <script>function loadCSS(e,t,n){"use strict";var i=window.document.createElement("link");var o=t||window.document.getElementsByTagName("script")[0];i.rel="stylesheet";i.href=e;i.media="only x";o.parentNode.insertBefore(i,o);setTimeout(function(){i.media=n||"all"})}
+    loadCSS("css/manifest.css");
+    function loadJS(a){"use strict";var b=window.document.getElementsByTagName("script")[0],c=window.document.createElement("script");return c.src=a,b.parentNode.insertBefore(c,b),c}
+    <!--build:remove -->
+    loadJS("js/vendor/domReady.js");
+    loadJS("js/vendor/vhBuggyfill.js");
+    loadJS("js/vendor/smoothScroll.js");
+    <!--/build -->
+    loadJS("js/main.js");</script>
+
 <!-- PICTUREFILL -->
-<!--/build -->
   <script>document.createElement("picture");</script>
   <!--build:js js/picturefill.min.js -->
-  <script src="js/vendor/picturefill.js" async></script>
+  <script src="js/picturefill.js" async></script>
   <!--/build-->
 
-<!--build:remove -->
 <!-- TYPEKIT -->
-<!--/build -->
   <script type="text/javascript">(function(d){var config={kitId:'dtg6nmd',scriptTimeout:3000},h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive"},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='//use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)})(document);</script>
 
-<!--build:remove -->
 <!-- CLOUD.TYPOGRAPHY 1.1.0 -->
-<!--/build -->
   <link rel="stylesheet" type="text/css" href="//cloud.typography.com/6808232/761324/css/fonts.css" />
-
-  <!--build:css css/albertyu.css -->
-  <link rel="stylesheet" href="css/manifest.css">
-  <!--/build -->
 </head>
 
 <body>
